--- a/Frontend/src/styles/admin/admin.css
+++ b/Frontend/src/styles/admin/admin.css
@@ -370,7 +370,7 @@ a .landing:hover{
 /* Pagination */
 .order-pagination {
   display: flex;
-  justify-content: center; /* Centered at bottom */
+  justify-content: center;
   align-items: center;
   gap: 1.5rem;
   margin-top: 2rem;
@@ -645,10 +645,10 @@ a .landing:hover{
   background: #f0f0f0;
 }
 
-.product-image {
+.manage-product-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; 
 }
 
 .product-info {
